@@ -120,3 +120,11 @@ class WindowActiveError(Exception):
 
     def __str__(self):
         return self.value
+
+class UnavailableError(Exception):
+    def __init__(self,value):
+        Exception.__init__(self)
+        self.value = value
+
+    def __str__(self):
+        return self.value
